--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.13.0",
     "express-ws": "^2.0.0-rc.1",
     "jade": "^1.11.0",
+    "mongodb": "^2.1.18",
     "mysql": "^2.10.2",
     "promise": "^7.1.1",
     "random-js": "^1.0.8",
