--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.10.2",
     "promise": "^7.1.1",
     "random-js": "^1.0.8",
-    "sequelize": "^3.23.0"
+    "sequelize": "^3.23.0",
+    "serve-favicon": "^2.3.0"
   }
 }
